[DP-37] feat: add draw-result notification type and listener